--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: hi no style, please! # name of the site
+title: Martina's Portfolio # name of the site
 author: Riccardo Graziosi # name of site's author
 email: riccardo.graziosi97@gmail.com # email of site's author
 url: https://riggraz.dev # root address of the site
