--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 title: Martina's Portfolio # name of the site
-author: Riccardo Graziosi # name of site's author
-email: riccardo.graziosi97@gmail.com # email of site's author
-url: https://riggraz.dev # root address of the site
-baseurl: "/no-style-please" # subpath of the site, e.g. "/blog" (leave it blank "" if you're site shouldn't use a subpath)
+author: Martina Sánchez # name of site's author
+email: martinasalvz@gmail.com # email of site's author
+url: " " # root address of the site
+baseurl: " " # subpath of the site, e.g. "/blog" (leave it blank "" if you're site shouldn't use a subpath)
 description: > # description of the site (multiple lines allowed)
-  A (nearly) no-CSS, fast, minimalist Jekyll theme.
+  Something something something
 
 permalink: /:slug.html
 
